--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   flutter_screenutil: ^5.9.0
+  flutter_riverpod: ^2.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
