--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.0
   flutter_riverpod: ^2.4.4
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
