--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_riverpod: ^2.4.4
   intl: ^0.18.1
+  dio: ^5.3.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
