--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_riverpod: ^2.4.4
   intl: ^0.18.1
   dio: ^5.3.3
+  skeletonizer: ^0.8.0
+  cached_network_image: ^3.3.0
+  flutter_spinkit: ^5.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
