--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   skeletonizer: ^0.8.0
   cached_network_image: ^3.3.0
   flutter_spinkit: ^5.2.0
+  dartz: ^0.10.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
