--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cached_network_image: ^3.3.0
   flutter_spinkit: ^5.2.0
   dartz: ^0.10.1
+  fluttertoast: ^8.2.2
+  pod_player: ^0.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
