--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,43 @@ dependencies:
   dartz: ^0.10.1
   fluttertoast: ^8.2.2
   pod_player: ^0.2.1
+  flutter_cors: ^1.5.0
+  flutter_offline: ^3.0.1
+  flutter_native_splash: ^2.3.7
+
+
+flutter_native_splash:
+    color: "#42a5f5"
+    #background_image: "assets/background.png"
+    #color_dark: "#042a49"
+    android_12:
+    image: assets/android12splash.png
+    # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
+    # apply when the device is in dark mode. If they are not specified, the app will use the
+    # parameters from above.
+    #image_dark: assets/android12splash-invert.png
+    #color_dark: "#042a49"
+    #icon_background_color_dark: "#eeeeee"
+
+    # The android, ios and web parameters can be used to disable generating a splash screen on a given
+    # platform.
+    android: true
+    ios: true
+    web: true
+
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
 
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -72,6 +105,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/json/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
