--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,42 +47,50 @@ dependencies:
   fluttertoast: ^8.2.2
   pod_player: ^0.2.1
   flutter_cors: ^1.5.0
-  flutter_offline: ^3.0.1
-  flutter_native_splash: ^2.3.7
+  lottie: ^2.7.0
+  flutter_offline: ^3.0.0
+  flutter_native_splash: ^2.3.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  riverpod_annotation: ^2.3.1
 
 
 flutter_native_splash:
-    color: "#42a5f5"
-    #background_image: "assets/background.png"
-    #color_dark: "#042a49"
-    android_12:
-    image: assets/android12splash.png
-    # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
-    # apply when the device is in dark mode. If they are not specified, the app will use the
-    # parameters from above.
-    #image_dark: assets/android12splash-invert.png
-    #color_dark: "#042a49"
-    #icon_background_color_dark: "#eeeeee"
+  color: "#42a5f5"
+  #background_image: "assets/background.png"
+  #color_dark: "#042a49"
 
-    # The android, ios and web parameters can be used to disable generating a splash screen on a given
-    # platform.
-    android: true
-    ios: true
-    web: true
+  android_12:
+  image: assets/images/movie.png
 
+  # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
+  # apply when the device is in dark mode. If they are not specified, the app will use the
+  # parameters from above.
+  #image_dark: assets/android12splash-invert.png
+  #color_dark: "#042a49"
+  #icon_background_color_dark: "#eeeeee"
 
-
+  # The android, ios and web parameters can be used to disable generating a splash screen on a given
+  # platform.
+  android: true
+  ios: true
+  web: true
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
-
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
+  riverpod_generator: ^2.3.6
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/"
+  image_path: "assets/images/movie.png"
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -104,7 +112,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
     - assets/json/
 
 
